2012-04-26 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/hc08/gen.c: Rewrite genSend to fix problem with register
	  clobbering. Allow use of tsx with function return values.
	* src/hc08/ralloc.c: Removed unneed constraint on stack operands

2012-04-25 Borut Razem <borut.razem AT gmail.com>

	* src/common.h, src/ds390/main.c: include SDCCsystem.h in common.h
	* src/SDCCmain.c: added newline at end of file
	* src/SDCCicode.c: use TRUE instead of undefined true
	* src/SDCCicode.h: fixed declaration of isOperandLiteral()

2012-04-25 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/peeph-gbz80.def:
	  Removed peephole that resulted in invalid or operand on gbz80.

2012-04-24 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/gen.c:
	  Fix #3521024.

2012-04-25 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/hc08/gen.c: Fixed bug with cpx use. Optimize stack adjustments
	  of +/-1. Use mov #0 instead of clr with volatile operands to avoid
	  read side effect. Avoid using x as stack frame base unless it saves
	  clock cycles.

2012-04-24 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCCicode.c,
	  src/SDCCopt.c,
	  src/z80/gen.c:
	  GET_VALUE_AT_ADDRESS with offset for z80, z180 and r2k.

2012-04-24 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/hc08/gen.c: Index stack frame via x instead of sp when convenient

2012-04-22 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/hc08/gen.c: Use msb to lsb order in assignment for compatibility
	  with hardware hardware registers. Expanded use of cpx and ldhx
	  instructions. Removed some old unused code. Fixed a stack bug in
	  genPlusIncr.

2012-04-23 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCCicode.c:
	  Enable replacing division by power of two by conditional addition and shift (for hc08, z80, z180, gbz80 and r2k).
	* src/z80/gen.c,
	  src/mcs51/gen.c: