@@ -195,6 +195,8 @@ static bool XAinst_ok(const assignment &a, unsigned short int i, const G_t &G, c
     ic->op == BITWISEAND ||
     ic->op == GETHBIT ||
     ic->op == GETABIT ||
+    ic->op == GETBYTE ||
+    ic->op == GETWORD ||
     ic->op == LEFT_OP ||
     ic->op == RIGHT_OP ||
     ic->op == '=' && !POINTER_SET(ic) ||
@@ -295,6 +297,8 @@ static bool AXinst_ok(const assignment &a, unsigned short int i, const G_t &G, c
     ic->op == BITWISEAND ||
     ic->op == GETHBIT ||
     ic->op == GETABIT ||
+    ic->op == GETBYTE ||
+    ic->op == GETWORD ||
     /*ic->op == LEFT_OP ||
     ic->op == RIGHT_OP ||*/
     ic->op == GET_VALUE_AT_ADDRESS ||
@@ -460,6 +464,8 @@ static float instruction_cost(const assignment &a, unsigned short int i, const G
     case OR_OP:
     case GETHBIT:
     case GETABIT:
+    case GETBYTE:
+    case GETWORD:
     case LEFT_OP:
     case RIGHT_OP:
     case GET_VALUE_AT_ADDRESS:
@@ -469,7 +475,7 @@ static float instruction_cost(const assignment &a, unsigned short int i, const G
     case JUMPTABLE:
     case CAST:
     case RECEIVE:
-    //case SEND: // Messes up _G.sendSet
+    case SEND:
     case DUMMY_READ_VOLATILE:
     case CRITICAL:
     case ENDCRITICAL:
